feat(tooltip): support legend tooltip

--- a/website/docs/tutorials/advanced/tooltip.mdx
+++ b/website/docs/tutorials/advanced/tooltip.mdx
@@ -72,6 +72,18 @@ const Example = () =>
         >
           Use Native Tooltip
         </ToggleButton>
+        <ToggleButton
+          checked={others.lt}
+          onChange={() =>
+            toggleOptions(
+              'lt',
+              { legend: { tooltip: { footer: 'Custom footer text', minWidth: '180px' } } },
+              { legend: { tooltip: null } },
+            )
+          }
+        >
+          Use Legend Tooltip
+        </ToggleButton>
       </>
     );
 
