--- a/website/docs/tutorials/charts/pie.mdx
+++ b/website/docs/tutorials/charts/pie.mdx
@@ -18,7 +18,13 @@ function showComponent() {
     Monaco: 205,
     Switzerland: 108,
   };
-  const options = {};
+  const options = {
+    legend: {
+      tooltip: {
+        footer: 'Click to select as filter',
+      },
+    },
+  };
 
   return (
     <md-chart
@@ -120,6 +126,3 @@ The data supports the following multiple data formats:
 | ----------- | -------------------- | ------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | innerRadius | `string` \| `number` | `0`     | The portion of the chart that is cut out of the middle. If string and ending with `%,` percentage of the chart radius. number is considered to be pixels.    |
 | dataKey     | `string`             | -       | Specifies the category field on the category axis. If not specified, the first field name of the first piece of data in data will be automatically obtained. |
-
-
-
