--- a/website/docs/tutorials/charts/pie.mdx
+++ b/website/docs/tutorials/charts/pie.mdx
@@ -18,13 +18,7 @@ function showComponent() {
     Monaco: 205,
     Switzerland: 108,
   };
-  const options = {
-    legend: {
-      tooltip: {
-        footer: 'Click to select as filter',
-      },
-    },
-  };
+  const options = {};
 
   return (
     <md-chart
